--- a/r4babs4/week-1/workshop.qmd
+++ b/r4babs4/week-1/workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Workshop"
-subtitle: "The logic of hypothesis testing and confidence intervals"
+subtitle: "Data Analysis 1: Core"
 toc: true
 toc-location: right
 ---
@@ -13,11 +13,11 @@ library(kableExtra)
 
 # Introduction
 
-![Artwork by @allison_horst:  "love this class"](images/love-this-class.png){fig-alt="A little monster flying a biplane wearing aviator glasses, pulling a banner that says 'Fully expecting to hate this class.' Below, a teacher wearing a cheerleading outfit labeled 'STATS' with a bullhorn labeled 'CODE' cheering desperately with pom-poms, trying to help students believe stats is actually going to be awesomely life-changing." width="800"}
+
 
 ## Session overview
 
-In this session you will remind yourself how to import files, and calculate confidence intervals on large and small samples.
+In this session you will 
 
 ## Philosophy
 
@@ -50,13 +50,13 @@ These four symbols are used at the beginning of each instruction so you know whe
 
 ![](images/do_in_R.png) Go the Files tab in the lower right pane and click on the `...` on the right. This will open a "Go to folder" window. Navigate to a place on your computer where you keep your work. Click Open.
 
-![](images/do_in_R.png) Also on the Files tab click on `New Folder`. Type "data-analysis-in-r-2" in to the box. This will be the folder that we work in throughout the Data Analysis in R part BABS2.
+![](images/do_in_R.png) Also on the Files tab click on `New Folder`. Type "data-analysis-in-r-4" in to the box. This will be the folder that we work in throughout the Data Analysis in R part BABS4.
 
-![](images/do_in_R.png) Make an RStudio project for this workshop by clicking on the drop-down menu on top right where it says `Project: (None)` and choosing New Project, then New Directory, then New Project. Name the RStudio Project 'week-1'.
+![](images/do_in_R.png) Make an RStudio project for this workshop by clicking on the drop-down menu on top right where it says `Project: (None)` and choosing New Project, then New Directory, then New Project. Name the RStudio Project '1-core'.
 
 ![](images/do_in_R.png) Make a new script then save it with a name like analysis.R to carry out the rest of the work.
 
-![](images/do_in_R.png) Add a comment to the script: `# Introduction to RStudio and your first graph` and load the **`tidyverse`** [@tidyverse] package
+![](images/do_in_R.png) Add a comment to the script: `# Core` and load the **`tidyverse`** [@tidyverse] package
 
 ![](images/do_in_R.png) Make a new folder called `data-raw`.
 
@@ -66,166 +66,15 @@ These four symbols are used at the beginning of each instruction so you know whe
 
 [Importing data from files](../../r4babs1/week-8/workshop.html#importing-data-from-files) was covered in BABS 1 [@rand2023] if you need to remind yourself.
 
-## Confidence intervals (large samples)
-
-The data in [beewing.txt](data-raw/beewing.txt) are left wing widths of 100 honey bees (mm). The confidence interval for large samples is given by:
-
-
-$\bar{x} \pm 1.96 \times s.e.$
-
-
-Where 1.96 is the quantile for 95% confidence.
-
-![](images/do_on_your_computer.png) Save [beewing.txt](data-raw/beewing.txt) to your `data-raw` folder.
-
-![](images/do_in_R.png) Read in the data and check the structure of the resulting dataframe.
 
 ```{r}
 #| include: false
 
 #---CODING ANSWER---
 
-bee <- read_table("data-raw/beewing.txt")
-str(bee)
 ```
 
-![](images/do_in_R.png) Calculate and assign to variables: the mean, standard deviation and standard error:
 
-```{r}
-# mean
-m <- mean(bee$wing)
-
-# standard deviation
-sd <- sd(bee$wing)
-
-# sample size (needed for the se)
-n <- length(bee$wing)
-
-# standard error
-se <- sd / sqrt(n)
-```
-
-![](images/do_in_R.png) To calculate the 95% confidence interval we need to look up the quantile (multiplier) using `qnorm()`
-
-```{r}
-q <- qnorm(0.975)
-```
-
-This should be about 1.96.
-
-![](images/do_in_R.png) Now we can use it in our confidence interval calculation
-
-```{r}
-lcl <- m - q * se
-ucl <- m + q * se
-```
-
-![](images/do_in_R.png) Print the values
-
-```{r}
-lcl
-ucl
-```
-
-This means we are 95% confident the population mean lies between 4.47 mm and 4.63 mm. The usual way of expressing this is that the mean is 4.55 +/- 0.07 mm
-
-![](images/do_in_R.png) Between what values would you be 99% confident of the population mean being?
-
-```{r}
-#| include: false
-
-#---CODING ANSWER---
-
-# qnorm(0.975) gives the quantile for 95%. For 99% we need qnorm(0.995)
-q <- qnorm(0.995)
-lcl <- m - q * se
-ucl <- m + q * se
-
-```
-
-<!-- #---THINKING ANSWER--- -->
-
-<!-- # the mean is 4.55 +/- 0.100. We are 99% certain the populations mean lies between 4.45 and 4.65 -->
-
-
-## Confidence intervals (small samples)
-
-The confidence interval for small samples is given by:
-
-
-$\bar{x} \pm \sf t_{[d.f]} \times s.e.$
-
-The only difference between the calculation for small and large sample is the multiple. For large samples we use the "the standard normal distribution" accessed with `qnorm()`; for small samples we use the "*t* distribution" assessed with `qt()`.The value returned by `q(t)` is larger than that returned by `qnorm()` which reflects the greater uncertainty we have on estimations of population means based on small samples.
-
-
-The fatty acid Docosahexaenoic acid (DHA) is a major component of membrane phospholipids in nerve cells and deficiency leads to many behavioural and functional deficits. The cross sectional area of neurons in the CA 1 region of the hippocampus of normal rats is 155 $\mu m^2$. A DHA deficient diet was fed to 8 animals and the cross sectional area (csa) of neurons is given in [neuron.txt](data-raw/neuron.txt)
-
-![](images/do_on_your_computer.png) Save [neuron.txt](data-raw/neuron.txt) to your `data-raw` folder
-
-![](images/do_in_R.png) Read in the data and check the structure of the resulting dataframe
-
-```{r}
-#| include: false
-
-#---CODING ANSWER---
-neur <- read_table("data-raw/neuron.txt")
-```
-
-![](images/do_in_R.png) Assign the mean to `m`.
-
-```{r}
-#| include: false
-
-#---CODING ANSWER---
-
-m <- mean(neur$csa)
-
-```
-
-![](images/do_in_R.png) Calculate and assign the standard error to `se`.
-
-```{r}
-#| include: false
-
-#---CODING ANSWER---
-
-# I created intermediate variables for sd and n
-sd <- sd(neur$csa)
-n <- length(neur$csa)
-se <- sd / sqrt(n)
-```
-
-To work out the confidence interval for our sample mean we need to use the *t* distribution because it is a small sample. This means we need to determine the degrees of freedom (the number in the sample minus one).
-
-![](images/do_in_R.png) We can assign this to a variable, `df`, using:
-
-```{r}
-df <- length(neur$csa) - 1
-```
-
-![](images/do_in_R.png) The *t* value is found by:
-
-```{r}
-t <- qt(0.975, df = df)
-```
-
-Note that we are using `qt()` rather than `qnorm()` but that the probability, 0.975, used is the same. Finally, we need to put our mean, standard error and *t* value in the equation. $\bar{x} \pm \sf t_{[d.f]} \times s.e.$.
-
-![](images/do_in_R.png) The upper confidence limit is:
-
-```{r}
-(m + t * se) |> round(2)
-```
-
-The first part of the command, `(m + t * se)` calculates the upper limit. This is 'piped' in to the `round()` function to round the result to two decimal places.
-
-![](images/do_in_R.png) Calculate the lower confidence limit:
-
-```{r include=FALSE}
-(m - t * se) |>  round(2)
-```
-
-![](images/answer.png) Given the upper and lower confidence values for the estimate of the population mean, what do you think about the effect of the DHA deficient diet?
 
 <!-- #---THINKING ANSWER--- -->
 
@@ -239,7 +88,7 @@ You're finished!
 
 # 🥳 Well Done! 🎉
 
-![Artwork by @allison_horst: "We belive in you!"](images/we-believe.png){fig-alt="Header text 'R learners' above five friendly monsters holding up signs that together read 'we believe in you.'" width="800"}
+
 
 # Independent study following the workshop
 
@@ -247,9 +96,9 @@ You're finished!
 
 # The Code file
 
-These contain all the code needed in the workshop even where it is not visible on the webpage.
+This contains all the code needed in the workshop even where it is not visible on the webpage.
 
-The [workshop.qmd](workshop.qmd) file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interweaved to produce well-formatted reports including webpages. Right-click on the link and choose Save-As to download. You will be able to open the Rmd file in RStudio. Alternatively, [View in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs2/week-1/workshop.qmd).Coding and thinking answers are marked with `#---CODING ANSWER---` and `#---THINKING ANSWER---`
+The `workshop.qmd` file is the file I use to compile the practical. Qmd stands for Quarto markdown. It allows code and ordinary text to be interweaved to produce well-formatted reports including webpages. [View the Qmd in Browser](https://github.com/3mmaRand/R4BABS/blob/main/r4babs4/week-1/workshop.qmd). Coding and thinking answers are marked with `#---CODING ANSWER---` and `#---THINKING ANSWER---`
 
 Pages made with R [@R-core], Quarto [@allaire2022], `knitr` [@knitr], `kableExtra` [@kableExtra]
 
