week 4 skeleton created

--- a/r4babs4/week-4/study_before_workshop.qmd
+++ b/r4babs4/week-4/study_before_workshop.qmd
@@ -1,13 +1,12 @@
 ---
 title: "Independent Study to prepare for workshop"
-subtitle: "One-way ANOVA and Kruskal-Wallis"
+subtitle: "DA 3 Immunobiology"
 toc: true
 toc-location: right
 ---
 
 1.  Prepare
 
-    i.  📖 Read [One-way ANOVA and Kruskal-Wallis](https://3mmarand.github.io/comp4biosci/one_way_anova_and_kw.html) 
-
+    i.  📖 Read 
 
 
