week 6 skeleton created

--- a/r4babs4/week-6/study_before_workshop.qmd
+++ b/r4babs4/week-6/study_before_workshop.qmd
@@ -1,16 +1,13 @@
 ---
 title: "Independent Study to prepare for workshop"
-subtitle: "Chi-squared tests and correlation"
+subtitle: "DA 4 Immunobiology"
 toc: true
 toc-location: right
 ---
 
 1.  Prepare
 
-    i.  **Either** 📖 Read [xxxxx](https://3mmarand.github.io/comp4biosci/xx.html) in **OR** 📹 Watch
-
-    {{< video https://www.youtube.com/watch?xx >}}
-
+    i.  
 
 
 
