--- a/r4babs4/week-6/overview.qmd
+++ b/r4babs4/week-6/overview.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Overview"
-subtitle: "Chi-squared tests and correlation"
+subtitle: "DA 4 Immunobiology"
 toc: true
 toc-location: right
 ---
@@ -23,7 +23,7 @@ The successful student will be able to:
 
 1.  [Prepare](study_before_workshop.qmd)
 
-    i.  📖 Read the book **OR** 📹 Watch two videos
+    i.  📖 Read 
 
 
 2.  [Workshop](workshop.qmd)
