--- a/r4babs4/week-6/study_after_workshop.qmd
+++ b/r4babs4/week-6/study_after_workshop.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Independent Study to consolidate this week"
-subtitle: "Chi-squared tests and correlation"
+subtitle: "DA 4 Immunobiology"
 toc: true
 toc-location: right
 format:
