overview (plan) and prior study

--- a/r4babs4/week-1/overview.qmd
+++ b/r4babs4/week-1/overview.qmd
@@ -5,34 +5,37 @@ toc: true
 toc-location: right
 ---
 
-This week we will cover 
+This week the independent study to be done before the workshop is revision of some stage 1 core concepts. It covers file types, file systems,  working directories,  paths and RStudio Projects. You may feel completely confident with them but many students will benefit from a refresher. In the workshop we will....
 
 
-
-
-
-
+Workshop: Project organisation, data with many variables and obs, getting an overview with summaries and distribution plots (that's kinda revision too but will seem different to them with more rows/cols,  concept of QC, filtering rows
+Consolidate: exercises on previous I think
 
 
 ### Learning objectives
 
 The successful student will be able to:
 
--    
+-    explain the organisation of files and directories in a file systems including root, home and working directories (revision)
 
--   
+-   explain absolute and relative file paths (revision)
 
--   
+-   know how to use a project-oriented workflow to organise work
 
--   
+-   data with many variables and obs
 
--   
+-   getting an overview with summaries and distribution plots
+
+-   concept of QC
+
+-   filtering rows
 
 ### Instructions
 
 1.  [Prepare](study_before_workshop.qmd)
 
-    i.  📖 Read 
+    i.  📖 Read Understanding file systems (Stage 1 revision).
+    ii. 📖 Read RStudio projects (Stage 1 revision).
 
 
 2.  [Workshop](workshop.qmd)
