--- a/references.bib
+++ b/references.bib
@@ -141,3 +141,39 @@
     note = {R package version 1.8.7},
     url = {https://CRAN.R-project.org/package=emmeans},
 }
+
+@article{baggerly2009,
+	title = {DERIVING CHEMOSENSITIVITY FROM CELL LINES: FORENSIC BIOINFORMATICS AND REPRODUCIBLE RESEARCH IN HIGH-THROUGHPUT BIOLOGY},
+	author = {Baggerly, Keith A and Coombes, Kevin R},
+	year = {2009},
+	date = {2009},
+	journal = {Ann. Appl. Stat.},
+	pages = {1309--1334},
+	volume = {3},
+	number = {4},
+	doi = {10.2307/27801549},
+	url = {http://www.jstor.org/stable/27801549},
+	note = {Publisher: Institute of Mathematical Statistics}
+}
+
+@techreport{oecdglobalscienceforum2020,
+	title = {Building digital workforce capacity and skills for data-intensive science},
+	author = {OECD Global Science Forum, },
+	year = {2020},
+	month = {06},
+	date = {2020-06-19},
+	url = {http://www.oecd.org/officialdocuments/publicdisplaydocumentpdf/?cote=DSTI/STP/GSF(2020)6/FINAL&docLanguage=En}
+}
+
+@article{markowetz2015,
+	title = {Five selfish reasons to work reproducibly},
+	author = {Markowetz, Florian},
+	year = {2015},
+	month = {12},
+	date = {2015-12-08},
+	journal = {Genome Biol.},
+	pages = {274},
+	volume = {16},
+	doi = {10.1186/s13059-015-0850-7},
+	url = {http://dx.doi.org/10.1186/s13059-015-0850-7}
+}
