--- a/r4babs4/week-1/workshop.qmd
+++ b/r4babs4/week-1/workshop.qmd
@@ -41,10 +41,90 @@ These four symbols are used at the beginning of each instruction so you know whe
 
 ![](images/do_on_internet.png) Something you should do in your browser on the internet. It may be searching for information, going to the VLE or downloading a file.
 
-![](images/answer.png) A question for you to think about and answer. Record your answers in your script for future reference.
+![](images/answer.png) A question for you to think about and answer. Record your answers  for future reference.
 :::
 
-# Getting started
+
+## Reproducibility
+
+### Why does it matter?
+
+![futureself, CC-BY-NC, by Julen
+Colomb](images/future_you.png){fig-alt="Person working at a computer with an offstage person asking 'How is the analysis going?' The person at the computer replies 'Can't understand the date...and the data collector does not answer my emails or calls' Person offstage: 'That's terrible! So cruel! Who did collect the data? I will sack them!' Person at the computer: 'um...I did, 3 years ago.'"
+width="400"}
+
+-   Five selfish reasons to work reproducibly [@markowetz2015].
+    Alternatively, see the very entertaining
+    [talk](https://youtu.be/yVT07Sukv9Q) which covers the the "Duke Scandal".
+
+-   Many high profile cases of work which did not reproduce e.g. Anil
+    Potti's work unravelled by @baggerly2009 in the "Duke Scandal"
+
+-   **Will** become standard in Science and publishing e.g OECD Global
+    Science Forum Building digital workforce capacity and skills for
+    data-intensive science [@oecdglobalscienceforum2020]
+
+### How to achieve reproducibility
+
+-   Scripting
+
+-   Organisation: Project-oriented workflows with file and folder
+    structure, naming things
+
+-   Documentation: Comment your code. 
+
+
+
+### Project-oriented workflow
+
+-   use folders to organise your work
+
+-   you are aiming for structured, systematic and repeatable.
+
+-   inputs and outputs should be clearly identifiable from structure
+    and/or naming
+
+Example
+
+```         
+-- stem-cells
+   |__stem-cells.Rproj
+   |__analysis.R
+   |__data-raw
+      |__2019-03-21_donor_1.csv
+      |__2019-03-21_donor_2.csv
+      |__2019-03-21_donor_3.csv
+   |__figures
+      |__01_volcano_donor_1_vs_donor_2.png
+      |__02_volcano_donor_1_vs_donor_3.png
+```
+
+## Naming things
+
+-   machine readable
+
+-   human readable
+
+-   play nicely with sorting
+
+I suggest
+
+-   no spaces in names
+
+-   use snake_case or kebab-case rather than CamelCase or dot.case
+
+-   use all lower case 
+
+-   ordering: use left-padded numbers e.g., 01, 02....99 or 001,
+    002....999
+
+-   dates [ISO 8601](https://en.wikipedia.org/wiki/ISO_8601) format:
+    2020-10-16
+
+# Exercises
+
+## Getting started
+
 
 ![](images/do_on_your_computer.png) Start RStudio from the Start menu.
 
@@ -52,7 +132,7 @@ These four symbols are used at the beginning of each instruction so you know whe
 
 ![](images/do_in_R.png) Also on the Files tab click on `New Folder`. Type "data-analysis-in-r-4" in to the box. This will be the folder that we work in throughout the Data Analysis in R part BABS4.
 
-![](images/do_in_R.png) Make an RStudio project for this workshop by clicking on the drop-down menu on top right where it says `Project: (None)` and choosing New Project, then New Directory, then New Project. Name the RStudio Project '1-core'.
+![](images/do_in_R.png) Make an RStudio project for this workshop by clicking on the drop-down menu on top right where it says `Project: (None)` and choosing New Project, then New Directory, then New Project. Name the RStudio Project 'core-01'.
 
 ![](images/do_in_R.png) Make a new script then save it with a name like analysis.R to carry out the rest of the work.
 
@@ -60,12 +140,33 @@ These four symbols are used at the beginning of each instruction so you know whe
 
 ![](images/do_in_R.png) Make a new folder called `data-raw`.
 
-# Exercises
 
-## Remind yourself how to import files!
 
-[Importing data from files](../../r4babs1/week-8/workshop.html#importing-data-from-files) was covered in BABS 1 [@rand2023] if you need to remind yourself.
+## Data with many variables and obs
 
+examine
+
+## Getting an overview 
+
+with summaries and distribution plots
+
+summary
+summary stats
+group_by
+distributions
+boxplots / violin
+facet
+think about the number of variables and observations!!
+ggpairs
+summarise and plot
+
+
+## Quality Control
+
+###   filtering rows
+a particular value
+NA
+make things zero
 
 ```{r}
 #| include: false
@@ -78,11 +179,6 @@ These four symbols are used at the beginning of each instruction so you know whe
 
 <!-- #---THINKING ANSWER--- -->
 
-<!-- the 95% confidence interval from 132.75 mu m^2 to 151.95 mu m^2  -->
-
-<!-- doesn't include 155 mu m^2 so we can conclude that DHA deficiency significantly  -->
-
-<!-- lowers csa -->
 
 You're finished!
 
